# Ironclad

./: .gitignore  README.md  main.py  pyproject.toml
ironclad.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ironclad/core/: audit.py  guards.py  llm_adapter.py  logger.py  orchestrator.py  planner.py  planner_local.py  registry.py
ironclad/executors/: build_chart.py  clean_data.py  explain_result.py  run_sql.py
ironclad/schemas/: plan.py
tests/: test_audit_trail.py  test_invalid_action.py  test_llm_adapter.py  test_plan_validation.py  test_planner_contract.py  test_sql_executor.py
